--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "rules": {
         "linebreak-style": 0,
         "indent": ["error", 4],
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "object-curly-newline": "off"
     }
 }
