--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
+    "expo-barcode-scanner": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
+    "prettier": "^2.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -29,8 +31,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "expo-barcode-scanner": "~9.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
