--- a/package.json
+++ b/package.json
@@ -8,42 +8,42 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-picker/picker": "1.9.2",
-    "@react-navigation/bottom-tabs": "^5.11.9",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.4",
-    "expo": "~40.0.0",
-    "expo-barcode-scanner": "~9.1.0",
-    "expo-camera": "~9.1.0",
-    "expo-status-bar": "~1.0.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.2.1",
+    "@react-navigation/bottom-tabs": "^5.11.15",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
+    "expo": "^44.0.0",
+    "expo-barcode-scanner": "~11.2.0",
+    "expo-camera": "~12.1.0",
+    "expo-status-bar": "~1.2.0",
     "firebase": "7.9.0",
-    "prettier": "^2.3.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "prettier": "^2.4.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
     "react-native-barcode-svg": "0.0.15",
-    "react-native-elements": "^3.3.2",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-maps": "0.27.1",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-maps": "0.29.4",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
-    "react-native-svg": "12.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.13.18",
-    "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "eslint": "^7.2.0",
+    "@babel/core": "^7.12.9",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^1.7.0"
   },
   "private": true
